# axionvera-network

./: .env.grpc.example  .gitignore  ARCHITECTURE.md  AWS_KMS_INTEGRATION.md  CONTRIBUTING.md  Cargo.toml  FEATURE_IMPLEMENTATION.md  HPA_IMPLEMENTATION.md  HPA_PR_DESCRIPTION.md  LICENSE  MEMORY_PROFILING_GUIDE.md  Makefile  PR_DESCRIPTION.md  README.md  config-aws-kms-example.toml  create-pr.md  horizon-config.example.json  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependency-audit.yml  release.yml
config/: genesis.example.json
contracts/vault-contract/: Cargo.toml
contracts/vault-contract/src/: errors.rs  events.rs  lib.rs  storage.rs
contracts/vault-contract/test_snapshots/test/: cannot_withdraw_more_than_balance.1.json  claim_with_no_pending_rewards_returns_zero.1.json  claim_with_zero_rewards.1.json  deposit_after_reward_distribution.1.json  deposit_and_withdraw_emit_structured_events_with_timestamps.1.json  deposit_requires_available_user_tokens_without_mutating_rewards.1.json  deposit_withdraw_round_trip.1.json  distribute_requires_available_admin_rewards.1.json  distribute_requires_deposits.1.json  large_deposit_and_withdraw.1.json  multiple_deposits_accumulate.1.json  multiple_reward_distributions_accumulate.1.json  multiple_users_deposits_and_withdrawals.1.json  query_functions_return_correct_values.1.json  rejects_invalid_amounts.1.json  rejects_invalid_token_configuration.1.json  reward_accrual_on_deposit_withdrawal_sequence.1.json  reward_distribution_and_claim_emit_structured_events_with_timestamps.1.json  reward_proportionality_with_unequal_deposits.1.json  rewards_are_proportional_and_claimable.1.json  test_claim_with_zero_rewards.1.json  test_deposit_after_reward_distribution.1.json  test_deposit_increases_total.1.json  test_deposit_logic.1.json  test_deposit_withdraw_round_trip.1.json  test_distribute_requires_deposits.1.json  test_edge_cases.1.json  test_initialization_is_one_time.1.json  test_large_deposit_and_withdraw.1.json  test_multiple_deposits_accumulate.1.json  test_multiple_reward_distributions_accumulate.1.json  test_multiple_users_deposits_and_withdrawals.1.json  test_multiple_withdrawals_work_correctly.1.json  test_negative_withdrawals_rejected.1.json  test_query_functions_return_correct_values.1.json  test_rejects_invalid_amounts.1.json  test_reward_accrual_on_deposit_withdrawal_sequence.1.json  test_reward_distribution.1.json  test_reward_proportionality_with_unequal_deposits.1.json  test_rewards_are_proportional_and_claimable.1.json  (+4 more)
docs/: architecture.md  contract-spec.md  contract-storage.md  contributing-guide.md  grpc-implementation.md  horizon-fallback.md
docs/fuzz/: SETUP-FUZZING.md
examples/: README.md  common.ts  deposit.ts  query-balance.ts  withdraw.ts
fuzz/: README.md
k8s/: HPA_IMPLEMENTATION.md  README.md  axionvera-node-deployment.yaml  deploy.sh  hpa.yaml  metrics-server.yaml  namespace.yaml  prometheus-adapter.yaml  prometheus.yaml  test-hpa.sh
network-node/: Cargo.toml  Dockerfile  build.rs
network-node/src/: aws_kms_signer.rs  aws_kms_signer_tests.rs  chain_params.rs  config.rs  consensus.rs  crypto.rs  database.rs  enhanced_server.rs  error.rs  error_middleware.rs  gateway.rs  horizon_client.rs  indexer.rs  lib.rs  main.rs  metrics.rs  openapi.rs  p2p.rs  pb.rs  profiling.rs  rate_limiter.rs  server.rs  shutdown.rs  signing.rs  signing_tests.rs  state_trie.rs  stellar_service.rs  telemetry.rs
network-node/src/grpc/: gateway_service.rs  health_service.rs  mod.rs  network_service.rs  p2p_service.rs  server.rs  vault_service.rs
proto/: gateway.proto  network.proto  vault.proto
scripts/: deploy.ts  initialize.ts
terraform/: README.md  eks.tf  main.tf  outputs-eks.tf  state-backend.tf
terraform/load_test/: main.tf
tests/: vault.test.ts
tests/integration/: grpc.test.ts  network-node.test.ts  setup.ts
tests/load/: load_test.js
