[package]
name = "axionvera-network-node"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
clap = { version = "4.0", features = ["derive"] }
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"
axum = "0.7"
tower = "0.4"
tower-http = "0.5"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
prometheus = "0.13"
redis = { version = "0.23", features = ["tokio-comp"] }

[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"
